--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,36 @@
     @apply bg-background text-foreground;
   }
 }
+
+@keyframes blob {
+  0% {
+    transform: translate(0px, 0px) scale(1);
+  }
+  33% {
+    transform: translate(30px, -50px) scale(1.1);
+  }
+  66% {
+    transform: translate(-20px, 20px) scale(0.9);
+  }
+  100% {
+    transform: translate(0px, 0px) scale(1);
+  }
+}
+
+.animate-blob {
+  animation: blob 7s infinite;
+}
+
+.animation-delay-2000 {
+  animation-delay: 2s;
+}
+
+.animation-delay-4000 {
+  animation-delay: 4s;
+}
+
+.bg-grid-black {
+  background-image: linear-gradient(to right, rgb(0 0 0 / 10%) 1px, transparent 1px),
+    linear-gradient(to bottom, rgb(0 0 0 / 10%) 1px, transparent 1px);
+  background-size: 40px 40px;
+}
